# SEA-ME-HACKATHON

./: .gitignore  7_8_이현도_최적화_정리.md  CODEX작업요약.md  GEMINI작업내용.md  README.md  d_racer_package_guide.md  gpu_vulkan_yolo_migration.md  sync_car.sh
docs/: [1] D-Racer Hardware Assembly Guide.md  [2.1] Development Environment Setup Guide.md  [2.2] Claude Code CLI Guide.md  [2] Development Environment Setup Guide.md  [3] D-Racer ROS2 Package Build Guide.md  [4] D-Racer ROS2 Package Build Guide.md  [4] Monitor Package.md  [5] Battery Package.md  [5] Monitor Package.md  [6] Battery Package.md  [6] Camera Package.md  [7] Camera Package.md  [7] Joystick & Control Package.md  [8] Joystick & Control Package.md  [8] OpenCV Package.md  [9] OpenCV Package.md
scripts/: align_steering.py  benchmark_detector.py  capture_recognition_dataset.py  car_run.sh  onboard_supervisor.sh  pc_setup.sh
src/battery/: package.xml
src/battery/battery/: battery_node.py
src/bisa/: package.xml  setup.cfg  setup.py
src/bisa/checkpoints/: best.pt
src/bisa/checkpoints/best_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
src/bisa/config/: dracer_params.yaml  dracer_params_powersafe.yaml
src/bisa/launch/: dracer_autonomous.launch.py  driving.launch.py  full_monitor.launch.py  onboard.launch.py  onboard_split.launch.py  vehicle.launch.py
src/bisa/src/: aruco_detector.py  autonomous_driving_node.py  dash_line_tuner.py  detector_node.py  dracer_config.py  inference_process.py  lane_perception.py  mission_controller.py  object_detector.py  param_gui_node.py  power_gui_node.py  system_telemetry_node.py  traffic_light.py  traffic_light_tuner.py  visualization.py  viz_node.py
src/bisa/test/: test_object_detector.py  test_perception_timing.py
src/bisa_cpp/: CMakeLists.txt  package.xml
src/bisa_cpp/src/: bisa_autonomous_node.cpp
src/camera/: CMakeLists.txt  package.xml
src/camera/camera/: camera_node.py
src/camera/src/: camera_node.cpp
src/config/: vehicle_config.yaml  vehicle_config.yaml.bak  vehicle_config.yaml.bak.1783589737
src/control/: package.xml
src/control/control/: control_node.py  power_guard.py
src/control/launch/: manual_driving.launch.py
src/joystick/: package.xml
src/joystick/joystick/: joystick_node.py
src/joystick/test/: test_nudge_buttons.py
src/joystick_msgs/msg/: Joystick.msg
src/monitor/monitor/: graph_utils.py  monitor_node.py  monitor_state.py
src/monitor/monitor/static/css/: style.css
src/monitor/monitor/static/js/: app.js
src/monitor/monitor/templates/: index.html
src/monitor/test/: test_graph_view.py
src/opencv/opencv/: opencv_node.py
src/topst_utils/topst_utils/: gamepads.py
