<?xml version="1.0"?>
<package format="3">
  <name>bisa_cpp</name>
  <version>0.1.0</version>
  <description>C++ real-time autonomous core for D-Racer BISA.</description>
  <maintainer email="topst@todo.todo">topst</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>yaml_cpp_vendor</depend>
  <build_depend>libopencv-dev</build_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
